NodeTrees lose users on undo #37719

Closed
opened 2013-12-06 18:49:42 +01:00 by Tom Edwards · 8 comments

System Information
Win7 x64

Blender Version
Broken: Blender 2.69 r60995
Worked: Unknown

Short description of error

Whenever Undo is executed, all Python node trees in the current blend file lose their users. If they don't have a fake user this leaves them with 0 users, and as a result they are not not written to file.

Exact steps for others to reproduce the error

  • Create a Python node tree
  • Perform an action which creates an undo step
  • Undo
  • Observe user count of node tree

Example blend: node_users.blend

**System Information** Win7 x64 **Blender Version** Broken: Blender 2.69 r60995 Worked: Unknown **Short description of error** Whenever Undo is executed, all Python node trees in the current blend file lose their users. If they don't have a fake user this leaves them with 0 users, and as a result they are not not written to file. **Exact steps for others to reproduce the error** - Create a Python node tree - Perform an action which creates an undo step - Undo - Observe user count of node tree Example blend: [node_users.blend](https://archive.blender.org/developer/F36974/node_users.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel
Lukas Tönne was assigned by Bastien Montagne 2013-12-07 19:34:36 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Think this for your desk, Lukas! :)

Think this for your desk, Lukas! :)

This issue was referenced by blender/blender-addons-contrib@f1a0278e90

This issue was referenced by blender/blender-addons-contrib@f1a0278e90889ce45bd9bac8140b7726c5d518de

This issue was referenced by f1a0278e90

This issue was referenced by f1a0278e90889ce45bd9bac8140b7726c5d518de
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit f1a0278e90.

Closed by commit f1a0278e90.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37719
No description provided.